force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ActualAmountUsedRollup__c.field-meta.xml
<CustomField>
    <fullName>OCE__ActualAmountUsedRollup__c</fullName>
    <description>Used to define the actual amount spent for the meeting to allow comparison between Requested Amount and Actual one. Calculates a total based on the sum of Actual Amount Used in Unit/Group Cost records</description>
    <inlineHelpText>Used to define the actual amount spent for the meeting to allow comparison between Requested Amount and Actual one. Calculates a total based on the sum of Actual Amount Used in Unit/Group Cost records</inlineHelpText>
    <label>Actual Amount Used</label>
    <summarizedField>OCE__MeetingDetail__c.OCE__ActualAmountUsed__c</summarizedField>
    <summaryFilterItems>
        <field>OCE__MeetingDetail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Group Cost, Unit Cost</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingDetail__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>