force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ActualCost__c.field-meta.xml
<CustomField>
    <fullName>OCE__ActualCost__c</fullName>
    <description>Enables User to provide the Actual Program Budget if there is no detailed budget for the current subtype of the Meeting</description>
    <inlineHelpText>Enables User to provide the Actual Program Budget if there is no detailed budget for the current subtype of the Meeting</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>