force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ActualCostRollup__c.field-meta.xml
<CustomField>
    <fullName>OCE__ActualCostRollup__c</fullName>
    <description>Displays the summary of the actual budget amount of the program that User has entered in Detailed Budget</description>
    <inlineHelpText>Displays the summary of the actual budget amount of the program that User has entered in Detailed Budget</inlineHelpText>
    <label>Actual Cost</label>
    <summarizedField>OCE__MeetingDetail__c.OCE__ActualCost__c</summarizedField>
    <summaryFilterItems>
        <field>OCE__MeetingDetail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Group Cost, Unit Cost</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingDetail__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>