force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ActualOutcomeLevel__c.field-meta.xml
<CustomField>
    <fullName>OCE__ActualOutcomeLevel__c</fullName>
    <description>The level of the actual outcomes expected as results of the funded activity</description>
    <inlineHelpText>The level of the actual outcomes expected as results of the funded activity</inlineHelpText>
    <label>Actual Outcome Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__OutcomeLevels</valueSetName>
    </valueSet>
</CustomField>