force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AdditionalSupporters__c.field-meta.xml
<CustomField>
    <fullName>OCE__AdditionalSupporters__c</fullName>
    <description>Identifies the additional external supports for this request</description>
    <label>Additional Supporters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>