force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AdditionalTerritoriesForSharing__c.field-meta.xml
<CustomField>
    <fullName>OCE__AdditionalTerritoriesForSharing__c</fullName>
    <description>Semicolon separated list of territory names to which Meeting should be shared. Used for Host Meetings.</description>
    <label>Additional Territories For Sharing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>