force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Agencies__c.field-meta.xml
<CustomField>
    <fullName>OCE__Agencies__c</fullName>
    <description>Set of Agency names.</description>
    <inlineHelpText>Set of Agency names.</inlineHelpText>
    <label>Agencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>