force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AgencySharingCodes__c.field-meta.xml
<CustomField>
    <fullName>OCE__AgencySharingCodes__c</fullName>
    <description>A unique set of Sharing Code values from Party records. Used for sharing criteria.</description>
    <inlineHelpText>A unique set of Sharing Code values from Party records. Used for sharing criteria.</inlineHelpText>
    <label>Agency Sharing Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>