force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Agenda__c.field-meta.xml
<CustomField>
    <fullName>OCE__Agenda__c</fullName>
    <description>The agenda of the Meeting.</description>
    <label>Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>