force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AllowedMMRecordTypesForAllocation__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllowedMMRecordTypesForAllocation__c</fullName>
    <description>The Meeting Member record types that are allowed on the Meeting Expense Allocations screen.</description>
    <inlineHelpText>The Meeting Member record types that are allowed on the Meeting Expense Allocations screen.</inlineHelpText>
    <label>Allocation: Allowed MM Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>