force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AnticipatedEventRevenue__c.field-meta.xml
<CustomField>
    <fullName>OCE__AnticipatedEventRevenue__c</fullName>
    <description>Amount of revenue expected to be generated from executing related events and activities, e.g. Registrations/Enrollments, Merchandise, etc.</description>
    <label>Anticipated Event Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>