force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__ApprovalStatus__c</fullName>
    <description>The approval status of the Meeting.</description>
    <inlineHelpText>The approval status of the Meeting.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>