force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ApprovedAmount__c</fullName>
    <description>The monetary value approved for funding or contribution.</description>
    <inlineHelpText>The monetary value approved for funding or contribution.</inlineHelpText>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>