force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ApprovedOfEstimatedBudget__c.field-meta.xml
<CustomField>
    <fullName>OCE__ApprovedOfEstimatedBudget__c</fullName>
    <description>Displays the percent of Estimated Budget that was approved</description>
    <formula>OCE__ApprovedAmount__c/OCE__EstimatedBudget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the percent of Estimated Budget that was approved</inlineHelpText>
    <label>Approved % of Estimated Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>