force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ApprovedOfRequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ApprovedOfRequestedAmount__c</fullName>
    <description>Displays the percent of Requested Amount that was approved</description>
    <formula>OCE__ApprovedAmount__c/OCE__RequestedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the percent of Requested Amount that was approved</inlineHelpText>
    <label>Approved % of Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>