force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Area__c.field-meta.xml
<CustomField>
    <fullName>OCE__Area__c</fullName>
    <description>Determines how the funding or contribution will be used by the beneficiary.</description>
    <inlineHelpText>Determines how the funding or contribution will be used by the beneficiary.</inlineHelpText>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery and Development Sciences</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>