force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AreaOfFocus__c.field-meta.xml
<CustomField>
    <fullName>OCE__AreaOfFocus__c</fullName>
    <description>Intended focus areas of the request or the engagement</description>
    <inlineHelpText>Intended focus areas of the request or the engagement</inlineHelpText>
    <label>Area Of Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Advocacy</fullName>
            </value>
            <value>
                <fullName>Therapeutic Area Awareness</fullName>
            </value>
            <value>
                <fullName>Policy Advocacy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>