force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AreHCPsInAttendance__c.field-meta.xml
<CustomField>
    <fullName>OCE__AreHCPsInAttendance__c</fullName>
    <description>Represents if the healthcare professionals will attend the event</description>
    <inlineHelpText>Represents if the healthcare professionals will attend the event</inlineHelpText>
    <label>Will healthcare professionals attend?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>