force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AverageActualExpenses__c.field-meta.xml
<CustomField>
    <fullName>OCE__AverageActualExpenses__c</fullName>
    <description>DEPRECATED. The average of actual expenses allocated to unique Meeting Members.</description>
    <formula>IF( OCE__MembersAllocatedToActualExpense__c =0,
            0,
            OCE__TotalActualExpenses__c /OCE__MembersAllocatedToActualExpense__c
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DEPRECATED. The average of actual expenses allocated to unique Meeting Members.</inlineHelpText>
    <label>DEPRECATED Average Actual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>