force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AverageEstimatedExpense__c.field-meta.xml
<CustomField>
    <fullName>OCE__AverageEstimatedExpense__c</fullName>
    <description>The average of estimated expenses allocated to unique Meeting Members.</description>
    <inlineHelpText>The average of estimated expenses allocated to unique Meeting Members.</inlineHelpText>
    <label>Average Estimated Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>