force-app/main/default/objects/OCE__Meeting__c/fields/OCE__AverageEstimatedExpenses__c.field-meta.xml
<CustomField>
    <fullName>OCE__AverageEstimatedExpenses__c</fullName>
    <description>DEPRECATED. The average of estimated expenses allocated to unique Meeting Members.</description>
    <formula>IF( OCE__MembersAllocatedToEstimateExpense__c =0,
            0,
            OCE__TotalEstimatedExpenses__c /OCE__MembersAllocatedToEstimateExpense__c
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DEPRECATED. The average of estimated expenses allocated to unique Meeting Members.</inlineHelpText>
    <label>DEPRECATED Average Estimated Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>