force-app/main/default/objects/OCE__Meeting__c/fields/OCE__BusinessJustification__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessJustification__c</fullName>
    <description>The business justification of the Meeting.</description>
    <label>Business Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>