force-app/main/default/objects/OCE__Meeting__c/fields/OCE__CalcReconciliationStart__c.field-meta.xml
<CustomField>
    <fullName>OCE__CalcReconciliationStart__c</fullName>
    <description>Expected Start Date of Financial Reconciliation</description>
    <inlineHelpText>Expected Start Date of Financial Reconciliation</inlineHelpText>
    <label>Calculated Reconciliation Start Date</label>
    <type>Date</type>
</CustomField>