force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ColleagueAttendeeQuota__c.field-meta.xml
<CustomField>
    <fullName>OCE__ColleagueAttendeeQuota__c</fullName>
    <description>Integer, the suggested Colleague Attendee Quota set during Engagement Initiation process on the Meeting level</description>
    <inlineHelpText>This value may be changed at the individual colleague level</inlineHelpText>
    <label>Colleague Attendee Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>