force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ColleagueAttendeeQuotaEnabled__c.field-meta.xml
<CustomField>
    <fullName>OCE__ColleagueAttendeeQuotaEnabled__c</fullName>
    <description>Formula, checks if the colleague attendee quota has been set for the Meeting</description>
    <formula>NOT(ISBLANK(OCE__ColleagueAttendeeQuota__c))</formula>
    <label>Colleague Attendee Quota Enabled</label>
    <type>Checkbox</type>
</CustomField>