force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Comments__c.field-meta.xml
<CustomField>
    <fullName>OCE__Comments__c</fullName>
    <description>Any comments about the Meeting.</description>
    <inlineHelpText>Any comments about the Meeting.</inlineHelpText>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>