force-app/main/default/objects/OCE__Meeting__c/fields/OCE__CompanyObjectives__c.field-meta.xml
<CustomField>
    <fullName>OCE__CompanyObjectives__c</fullName>
    <description>Objectives which will be achieved by sponsoring this program</description>
    <inlineHelpText>Describe the objectives we will be achieving by sponsoring this program</inlineHelpText>
    <label>Company Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>