force-app/main/default/objects/OCE__Meeting__c/fields/OCE__CompletionDateMethod__c.field-meta.xml
<CustomField>
    <fullName>OCE__CompletionDateMethod__c</fullName>
    <description>Determines by which method that the system will use for setting the completion date</description>
    <inlineHelpText>Determines by which method that the system will use for setting the completion date</inlineHelpText>
    <label>Completion Date Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement End Date</fullName>
            </value>
            <value>
                <fullName>Attendance Date</fullName>
            </value>
            <value>
                <fullName>Manually Entered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>