force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ComplianceAgreementStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__ComplianceAgreementStatus__c</fullName>
    <description>Field indicates status of compliance statement acceptance.</description>
    <inlineHelpText>Field indicates status of compliance statement acceptance.</inlineHelpText>
    <label>Compliance Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__ComplianceAgreementStatuses</valueSetName>
    </valueSet>
</CustomField>