force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ComplianceRisk__c.field-meta.xml
<CustomField>
    <fullName>OCE__ComplianceRisk__c</fullName>
    <description>Field stores risk score with Compliance type</description>
    <inlineHelpText>Field stores risk score with Compliance type</inlineHelpText>
    <label>Compliance Risk</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>