force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ComplianceRiskLastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__ComplianceRiskLastUpdatedDate__c</fullName>
    <description>Date that the Compliance Risk was last updated</description>
    <label>Compliance risk last updated date</label>
    <type>DateTime</type>
</CustomField>