force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ComplianceRiskLevel__c.field-meta.xml
<CustomField>
    <fullName>OCE__ComplianceRiskLevel__c</fullName>
    <description>Field stores risk level with Compliance type</description>
    <inlineHelpText>Field stores risk level with Compliance type</inlineHelpText>
    <label>Compliance Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>