force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ComplianceRiskVisualization__c.field-meta.xml
<CustomField>
    <fullName>OCE__ComplianceRiskVisualization__c</fullName>
    <description>Visualization for Compliance Risk Level</description>
    <formula>CASE(OCE__ComplianceRiskLevel__c,
            &quot;Low&quot;,IMAGE(&quot;/resource/OCE__ApolloIcons/png/flag-green.png&quot;, TEXT(OCE__ComplianceRiskLevel__c)) + &quot; &quot; + TEXT(OCE__ComplianceRiskLevel__c) + &quot; (&quot; + TEXT(OCE__ComplianceRisk__c) + &quot;)&quot;,
            &quot;Moderate&quot;,IMAGE(&quot;/resource/OCE__ApolloIcons/png/flag-yellow.png&quot;, TEXT(OCE__ComplianceRiskLevel__c)) + &quot; &quot; + TEXT(OCE__ComplianceRiskLevel__c) + &quot; (&quot; + TEXT(OCE__ComplianceRisk__c) + &quot;)&quot;,
            &quot;High&quot;,IMAGE(&quot;/resource/OCE__ApolloIcons/png/flag-red.png&quot;, TEXT(OCE__ComplianceRiskLevel__c)) + &quot; &quot; + TEXT(OCE__ComplianceRiskLevel__c) + &quot; (&quot; + TEXT(OCE__ComplianceRisk__c) + &quot;)&quot;,
            &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Risk Visualization</label>
    <type>Text</type>
</CustomField>