force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ComplianceStatements__c.field-meta.xml
<CustomField>
    <fullName>OCE__ComplianceStatements__c</fullName>
    <description>Field contains compliance statements which were configured for meeting.</description>
    <inlineHelpText>Field contains compliance statements which were configured for meeting.</inlineHelpText>
    <label>Compliance Statements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>