force-app/main/default/objects/OCE__Meeting__c/fields/OCE__DecisionByDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DecisionByDate__c</fullName>
    <description>The date that the decision whether to move forward with the request is due.</description>
    <inlineHelpText>The date that the decision whether to move forward with the request is due.</inlineHelpText>
    <label>Decision By Date</label>
    <type>Date</type>
</CustomField>