force-app/main/default/objects/OCE__Meeting__c/fields/OCE__DecisionProvidedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DecisionProvidedDate__c</fullName>
    <description>Date Decision is provided</description>
    <label>Decision Provided Date</label>
    <type>Date</type>
</CustomField>