force-app/main/default/objects/OCE__Meeting__c/fields/OCE__DeliveryFormat__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeliveryFormat__c</fullName>
    <description>The format in which the Meeting will be delivered.</description>
    <inlineHelpText>The format in which the Meeting will be delivered.</inlineHelpText>
    <label>Delivery Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>InPerson</fullName>
                <label>In Person</label>
            </value>
            <value>
                <fullName>InPerson&amp;Virtual</fullName>
                <label>In Person &amp; Virtual</label>
            </value>
            <value>
                <fullName>Remote Live</fullName>
            </value>
            <value>
                <fullName>Self-Paced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>