force-app/main/default/objects/OCE__Meeting__c/fields/OCE__Description__c.field-meta.xml
<CustomField>
    <fullName>OCE__Description__c</fullName>
    <description>An expanded description of the meeting.</description>
    <inlineHelpText>An expanded description of the meeting.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>