force-app/main/default/objects/OCE__Meeting__c/fields/OCE__DescriptionOfServices__c.field-meta.xml
<CustomField>
    <fullName>OCE__DescriptionOfServices__c</fullName>
    <description>Description of Services</description>
    <label>Description of Services</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>