force-app/main/default/objects/OCE__Meeting__c/fields/OCE__DiseaseState__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiseaseState__c</fullName>
    <description>The disease state(s) related to the therapeutic area</description>
    <inlineHelpText>The disease state(s) related to the therapeutic area</inlineHelpText>
    <label>Disease State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>OCE__TherapeuticArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OCE__DiseaseStates</valueSetName>
    </valueSet>
</CustomField>