force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The end date and time of the Meeting.</description>
    <inlineHelpText>The end date and time of the Meeting.</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>