force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EstimatedBudget__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedBudget__c</fullName>
    <description>Total budgeted amount for this engagement</description>
    <inlineHelpText>Total budgeted amount for this engagement</inlineHelpText>
    <label>Estimated Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>