force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EstimatedBudgetVarianceAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedBudgetVarianceAmount__c</fullName>
    <description>Variance/difference between the overall estimated budget and the detailed cost breakdown provided</description>
    <formula>OCE__EstimatedBudget__c  -  OCE__EstimatedCostBreakdownRollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Budget Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>