force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EstimatedBudgetVarianceP__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedBudgetVarianceP__c</fullName>
    <description>Variance/difference (in percent) between the detailed cost breakdown in relation to the overall estimated budget</description>
    <formula>OCE__EstimatedCostBreakdownRollup__c  /  OCE__EstimatedBudget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Budget Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>