force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EstimatedCostBreakdownRollup__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedCostBreakdownRollup__c</fullName>
    <description>Rollup summary of the cost line item details</description>
    <label>Sum of Estimated Cost Breakdown</label>
    <summarizedField>OCE__MeetingDetail__c.OCE__EstimatedTotalCost__c</summarizedField>
    <summaryFilterItems>
        <field>OCE__MeetingDetail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Unit Cost, Group Cost</value>
    </summaryFilterItems>
    <summaryForeignKey>OCE__MeetingDetail__c.OCE__Meeting__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>