force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EstimatedParticipants__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedParticipants__c</fullName>
    <description>The estimated number of participants that will attend the Meeting.</description>
    <inlineHelpText>The estimated number of participants that will attend the Meeting.</inlineHelpText>
    <label>Estimated # of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>