force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EventAttendee__c.field-meta.xml
<CustomField>
    <fullName>OCE__EventAttendee__c</fullName>
    <description>Type of individuals and companies are excepted to participate in the program</description>
    <inlineHelpText>Describe what type of individuals and companies are excepted to participate in the program</inlineHelpText>
    <label>Event Attendee</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>