force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EventDetails__c.field-meta.xml
<CustomField>
    <fullName>OCE__EventDetails__c</fullName>
    <description>Details about the program which is being sponsored</description>
    <inlineHelpText>Describe in detail what program is being sponsored</inlineHelpText>
    <label>Event Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>