force-app/main/default/objects/OCE__Meeting__c/fields/OCE__EventOrganizer__c.field-meta.xml
<CustomField>
    <fullName>OCE__EventOrganizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the external party who initiates this request and the organizer of the event</description>
    <inlineHelpText>Name of the external party who initiates this request and the organizer of the event</inlineHelpText>
    <label>Event Organizer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__Party__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__Party__c</referenceTo>
    <relationshipLabel>Meetings (Event Organizer)</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>