force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ExplanationOfUseOfFunds__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExplanationOfUseOfFunds__c</fullName>
    <description>Enables the Requestor to explain why they didn&apos;t use the funds as outlined in the grant request</description>
    <inlineHelpText>Enables the Requestor to explain why they didn&apos;t use the funds as outlined in the grant request</inlineHelpText>
    <label>Explanation of Use of Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>