force-app/main/default/objects/OCE__Meeting__c/fields/OCE__ExternalRequestAllowed__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExternalRequestAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow External Portal HCP users to request to sponsored to the pre-approved 3rd party Medical Education Congress</description>
    <inlineHelpText>Allow External Portal HCP users to request to sponsored to the pre-approved 3rd party Medical Education Congress</inlineHelpText>
    <label>External Request Allowed</label>
    <type>Checkbox</type>
</CustomField>